--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "@mui/material": "^5.15.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-datepicker": "^4.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
