--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,6 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
@@ -36,8 +31,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4",
-    "pretty-quick": "^2.0.1",
-    "husky": "^4.2.1"
+    "vite": "^5.1.4"
   }
 }
