--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "nodemon ./bin/www",
     "migrate": "node model/database.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +20,8 @@
     "express": "^4.18.2",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "pretty-quick": "^2.0.1",
+    "husky": "^4.2.1"
   }
 }
