--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
     "start": "nodemon ./bin/www",
     "migrate": "node model/database.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "husky": "^4.3.8",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
-    "pretty-quick": "^2.0.1",
-    "husky": "^4.2.1"
+    "prettier": "^3.2.5",
+    "pretty-quick": "^2.0.2"
   }
 }
