--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "migrate": "node model/database.js"
+    "migrate": "node model/database.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,11 +14,12 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "husky": "^4.3.8",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5",
-    "pretty-quick": "^2.0.2"
+    "prettier": "^3.2.5"
+  },
+  "devDependencies": {
+    "husky": "^9.0.11"
   }
 }
