--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "migrate": "node model/database.js",
-    "prepare": "husky"
+    "migrate": "node model/database.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -18,8 +17,5 @@
     "mysql": "^2.18.1",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
-  },
-  "devDependencies": {
-    "husky": "^9.0.11"
   }
 }
